@@ -120,38 +120,6 @@ And returns the write length.
 
 This method is implemented in a child class.
 
-=head2 print
-
-C<method print : void ($string : string);>
-
-Outputs the string $string to the stream associated with the file descriptoer L</"FD">.
-
-Same as the following method call.
-
-  $handle->write($string);
-
-=head2 printf
-
-C<method printf : void ($format : string, $args : object[]...);>
-
-Outputs a string fomatted with the format $format and its parameters $args to the stream associated with the file descriptoer L</"FD">.
-
-Same as the following method call.
-
-  my $formated_string = Format->sprintf($format, $args);
-  $handle->print($formated_string);
-
-=head2 say
-
-C<method say : void ($string : string);>
-
-Outputs the string $string and C<\n> to the stream associated with the file descriptoer L</"FD">.
-
-Same as the following method call.
-
-  $handle->print($string);
-  $handle->print("\n");
-
 =head2 stat
 
 C<method stat : Sys::IO::Stat ();>
